kubernetes/apps/default/plex/app/route.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/route.openshift.io/route_v1.json
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: plex
  labels:
    ingress: grappleberry
  annotations:
    haproxy.router.openshift.io/timeout: 120s
spec:
  host: plex.grappleberry.xyz
  port:
    targetPort: 32400
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: plex
    weight: 100
  wildcardPolicy: None
